chore: Add swagger docs for upload avatar
